--- a/sorc/seaice_reformat.fd/makefile
+++ b/sorc/seaice_reformat.fd/makefile
@@ -1,14 +1,20 @@
+#!/bin/sh
+
 #mmablib -- arcdis, wdir
 #w3lib -- w3utcdat, w3movdat, w3ai19
 
-#LIBS=-L/Volumes/ncep/nceplibs/ -lw3nco_4 -L $(BASE)/mmab/$(mmablib_ver)/ -lombf_4
+CMD= seaice_reformat
+OBJS= reformat.o kmlout.o sk2out.o getfcst.o
+
+.f90.o: 
+	$(FC) -c $(FOPTS) $<
 
 .f.o:
-	$(FC) -c $(FOPTS) $*.f
+	$(FC) -c $(FOPTS) $<
 
-OBJS = reformat.o kmlout.o sk2out.o getfcst.o
-
-seaice_reformat : $(OBJS)
-	$(FC) $(OBJS) -o seaice_reformat $(LIBS) -lombf_4 
+%.o : %.f90
+	$(FC) -c $(FOPTS) $<
 
 
+$(CMD) : $(OBJS)
+	$(FC) $(OBJS) -o $(CMD) $(LIBS) -lombf_4 
