build on wcoss2

--- a/sorc/seaice_ensblend.Cd/makefile
+++ b/sorc/seaice_ensblend.Cd/makefile
@@ -1,9 +1,8 @@
 # These are now set by calling environment:
 #COPTS= -Wall  -O2 -DLINUX 
-#LIB=-L $(BASE)/mmab/$(mmablib_ver)
-#INCDIR=$(BASE)/mmab/$(mmablib_ver)/include/
+#MMAB_INC=$(BASE)/mmablib/$(mmablib_ver)/include/
 
 all : seaice_midpoints 
 
 seaice_midpoints : midpoints.C centroid.C
-	$(CC) $(COPTS) midpoints.C -I $(INCDIR) -o $(@) $(LIBS) -l ombf_4
+	$(CC) $(COPTS) midpoints.C -I $(MMAB_INC) -o $(@) $(LIBS) -l ombf_4 -l imf 
