--- a/sorc/seaice_preaverage.Cd/makefile
+++ b/sorc/seaice_preaverage.Cd/makefile
@@ -14,9 +14,9 @@ JCODE=	sicedrft
 #CC= g++
 #COPTS= -O2 -Wall -DLINUX
 #LIBS=$(BASE)/mmab/$(mmablib_ver)/libombf_4.a
-#INCDIR=$(BASE)/mmab/$(mmablib_ver)/include/
+#MMAB_INC=$(BASE)/mmab/$(mmablib_ver)/include/
 ################################################################################
 #This is needed for constructing input met. files:
 preaverage : preaverage.C
-	$(CC) preaverage.C $(COPTS) -I $(INCDIR) $(LIBS) -lombf_4 -lm -o seaice_preaverage
+	$(CC) preaverage.C $(COPTS) -I $(MMAB_INC) $(MMAB_LIBF4) -lm -lirc -lsvml -o seaice_preaverage
 
