--- a/sorc/seaice_preaverage.Cd/makefile
+++ b/sorc/seaice_preaverage.Cd/makefile
@@ -10,13 +10,9 @@ JCODE=	sicedrft
 #JORG=	NP21
 ################################################################################
 #Linux 
-#FC= ifort
-#CC= g++
-#COPTS= -O2 -Wall -DLINUX
-#LIBS=$(BASE)/mmab/$(mmablib_ver)/libombf_4.a
-#MMAB_INC=$(BASE)/mmab/$(mmablib_ver)/include/
 ################################################################################
 #This is needed for constructing input met. files:
 preaverage : preaverage.C
-	$(CC) preaverage.C $(COPTS) -I $(MMAB_INC) $(MMAB_LIBF4) -lm -lirc -lsvml -o seaice_preaverage
+	#$(CC) preaverage.C $(COPTS) -I $(MMAB_INC) $(MMAB_LIBF4) -lm -lirc -lsvml -o seaice_preaverage
+	$(CC) preaverage.C $(COPTS) -I $(MMAB_INC) $(BASE)/libombf_4.a -lm -lirc -lsvml -o seaice_preaverage
 
